--- a/app/src/main/res/layout/fragment_second_step.xml
+++ b/app/src/main/res/layout/fragment_second_step.xml
@@ -1,61 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.bobbiny.cordcalculator.nestedNavHost.secondFragment.SecondStepFragment">
+<layout>
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/small_value"
-        android:layout_marginTop="@dimen/small_value"
-        android:text="@string/second_step_text"
-        android:textColor="@color/colorBlack"
-        android:textSize="@dimen/question_text_size"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <data>
 
-    <CheckBox
-        android:id="@+id/checkbox1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/mid_value"
-        android:text="@string/second_step_first_answer_text"
-        style="@style/checkboxStyle"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        <variable
+            name="presenter"
+            type="com.bobbiny.cordcalculator.nestedNavHost.secondFragment.SecondStepContract.Presenter" />
+    </data>
 
-    <CheckBox
-        android:id="@+id/checkbox2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/small_value"
-        android:text="@string/second_step_second_answer_text"
-        style="@style/checkboxStyle"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkbox1" />
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="com.bobbiny.cordcalculator.nestedNavHost.secondFragment.SecondStepFragment">
 
-    <CheckBox
-        android:id="@+id/checkbox3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/small_value"
-        android:text="@string/second_step_third_answer_text"
-        style="@style/checkboxStyle"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkbox2" />
+        <TextView
+            android:id="@+id/second_step_title_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/small_value"
+            android:layout_marginTop="@dimen/small_value"
+            android:text="@string/second_step_text"
+            android:textColor="@color/colorBlack"
+            android:textSize="@dimen/question_text_size"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <CheckBox
-        android:id="@+id/checkbox4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/small_value"
-        android:text="@string/second_step_fourth_answer_text"
-        style="@style/checkboxStyle"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkbox3" />
+        <CheckBox
+            android:id="@+id/checkbox1"
+            style="@style/checkboxStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/mid_value"
+            android:onClick="@{(v) -> presenter.onCheckboxClickHandler(v)}"
+            android:text="@string/second_step_first_answer_text"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/second_step_title_text" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <CheckBox
+            android:id="@+id/checkbox2"
+            style="@style/checkboxStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/small_value"
+            android:onClick="@{(v) -> presenter.onCheckboxClickHandler(v)}"
+            android:text="@string/second_step_second_answer_text"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/checkbox1" />
+
+        <CheckBox
+            android:id="@+id/checkbox3"
+            style="@style/checkboxStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/small_value"
+            android:onClick="@{(v) -> presenter.onCheckboxClickHandler(v)}"
+            android:text="@string/second_step_third_answer_text"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/checkbox2" />
+
+        <CheckBox
+            android:id="@+id/checkbox4"
+            style="@style/checkboxStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/small_value"
+            android:onClick="@{(v) -> presenter.onCheckboxClickHandler(v)}"
+            android:text="@string/second_step_fourth_answer_text"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/checkbox3" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
